# plasmoid-clones

./: README.md
lockout/: CMakeLists.txt  metadata.desktop  metadata.json
lockout/contents/config/: main.xml
lockout/contents/ui/: ConfigGeneral.qml  config.ui  lockout.qml
org.kde.notifications/: metadata.desktop
org.kde.notifications/contents/ui/: NotificationIcon.qml
